--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "tsc test/index.ts && node test/",
     "start": "tsc && node build/",
     "dev": "nodemon -e ts -w ./ -x pnpm run start"
   },
@@ -12,15 +12,27 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/sequelize": "^4.28.14",
+    "@types/shortid": "^0.0.29",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "@types/node": "^18.13.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.20",
+    "sequelize": "^6.28.0",
+    "shortid": "^2.2.16",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.1.4",
     "ts-node": "^10.9.1"
   }
 }
