--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/formidable": "^2.0.5",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/sequelize": "^4.28.14",
     "@types/shortid": "^0.0.29",
@@ -27,6 +28,7 @@
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
