--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-jwt": "^8.4.1",
     "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
+    "nodejs-websocket": "^1.7.2",
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
     "shortid": "^2.2.16",
