--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.17",
     "@types/formidable": "^2.0.5",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/nanoid": "^3.0.0",
     "@types/sequelize": "^4.28.14",
     "@types/shortid": "^0.0.29",
     "typescript": "^4.9.5"
@@ -30,6 +31,7 @@
     "express-jwt": "^8.4.1",
     "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
+    "nanoid": "^3.0.1",
     "nodejs-websocket": "^1.7.2",
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
