--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/nanoid": "^3.0.0",
     "@types/sequelize": "^4.28.14",
     "@types/shortid": "^0.0.29",
+    "prettier": "^2.8.4",
     "typescript": "^4.9.5"
   },
   "dependencies": {
